fix: 修复scrollbar组件因为之前预留的paddiing-right和padding-bottom导致在移动端下拖曳的抖动问题

--- a/src/styles/components/scrollbar.less
+++ b/src/styles/components/scrollbar.less
@@ -3,8 +3,6 @@
     height: 100%;
     position: relative;
     overflow: hidden;
-    padding-right: 5px;
-    padding-bottom: 5px;
 
     .@{ns}scrollbar-area {
         min-width: 100%;
